--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 project(styleplugin LANGUAGES CXX)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(stylewindow)
 add_subdirectory(styles)
