chore: add toml example

--- a/platformplugins/CMakeLists.txt
+++ b/platformplugins/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(LIB_NAME marinePlatformTheme)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
+find_package(tomlplusplus REQUIRED)
 
 add_library(${LIB_NAME} MODULE
   marinePlatformTheme.h marinePlatformTheme.cpp
