chore: use xdg_desktop_portal instead

--- a/platformplugins/CMakeLists.txt
+++ b/platformplugins/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(LIB_NAME marinePlatformTheme)
 
-find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets)
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets DBus)
 find_package(tomlplusplus REQUIRED)
 
 if(${QT_VERSION} STREQUAL "5" AND ${SUPPORT_KDE})
@@ -8,12 +8,14 @@ if(${QT_VERSION} STREQUAL "5" AND ${SUPPORT_KDE})
   find_package(KF5Config REQUIRED)
   find_package(KF5ConfigWidgets REQUIRED)
   find_package(KF5IconThemes REQUIRED)
+  find_package(Qt5ServiceSupport)
   find_package(Qt5ThemeSupport REQUIRED)
 endif()
 
 add_library(${LIB_NAME} MODULE
   marinePlatformTheme.h marinePlatformTheme.cpp
   marineThemePlugin.h marineThemePlugin.cpp
+  qxdgdesktopportalfiledialog_p.h qxdgdesktopportalfiledialog.cpp
 )
 
 set_target_properties(${LIB_NAME} PROPERTIES
@@ -25,6 +27,7 @@ target_link_libraries(${LIB_NAME} PRIVATE
   Qt::Gui
   Qt::GuiPrivate
   Qt::Widgets
+  Qt::DBus
 )
 
 if(${QT_VERSION} STREQUAL "5" AND ${SUPPORT_KDE})
@@ -33,6 +36,7 @@ if(${QT_VERSION} STREQUAL "5" AND ${SUPPORT_KDE})
     KF5::ConfigWidgets
     KF5::IconThemes
     Qt5::ThemeSupportPrivate
+    Qt5::ServiceSupportPrivate
   )
 endif()
 
