--- a/consolehelp/CMakeLists.txt
+++ b/consolehelp/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BIN_NAME marinehelp)
+set(BIN_NAME marinehelp${QT_VERSION})
 
 find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets)
 
@@ -12,3 +12,5 @@ target_link_libraries(${BIN_NAME} PRIVATE
   Qt::GuiPrivate
   Qt::Widgets
 )
+
+install(TARGETS ${BIN_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
