chore: support qt6 breeze

--- a/platformplugins/CMakeLists.txt
+++ b/platformplugins/CMakeLists.txt
@@ -2,15 +2,19 @@ set(LIB_NAME marinePlatformTheme)
 
 find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets DBus)
 find_package(tomlplusplus REQUIRED)
-
-if(${QT_VERSION} STREQUAL "5" AND ${SUPPORT_KDE})
+if (${SUPPORT_KDE})
   add_definitions(-DSUPPORT_KDE)
-  find_package(KF5Config REQUIRED)
-  find_package(KF5ConfigWidgets REQUIRED)
-  find_package(KF5IconThemes REQUIRED)
-  find_package(Qt5ServiceSupport)
-  find_package(Qt5ThemeSupport REQUIRED)
-
+  if(${QT_VERSION} STREQUAL 5)
+    find_package(KF5Config REQUIRED)
+    find_package(KF5ConfigWidgets REQUIRED)
+    find_package(KF5IconThemes REQUIRED)
+    find_package(Qt5ServiceSupport)
+    find_package(Qt5ThemeSupport REQUIRED)
+  elseif(${QT_VERSION} STREQUAL 6)
+    find_package(KF6Config REQUIRED)
+    find_package(KF6ConfigWidgets REQUIRED)
+    find_package(KF6IconThemes REQUIRED)
+  endif()
 endif()
 
 if (${QT_VERSION} STREQUAL "6" AND ${AS_KDE6_PLUGIN})
@@ -35,14 +39,22 @@ target_link_libraries(${LIB_NAME} PRIVATE
   Qt::DBus
 )
 
-if(${QT_VERSION} STREQUAL "5" AND ${SUPPORT_KDE})
-  target_link_libraries(${LIB_NAME} PRIVATE
-    KF5::ConfigCore
-    KF5::ConfigWidgets
-    KF5::IconThemes
-    Qt5::ThemeSupportPrivate
-    Qt5::ServiceSupportPrivate
-  )
+if(${SUPPORT_KDE})
+  if(${QT_VERSION} STREQUAL "5")
+    target_link_libraries(${LIB_NAME} PRIVATE
+      KF5::ConfigCore
+      KF5::ConfigWidgets
+      KF5::IconThemes
+      Qt5::ThemeSupportPrivate
+      Qt5::ServiceSupportPrivate
+    )
+  elseif(${QT_VERSION} STREQUAL 6)
+    target_link_libraries(${LIB_NAME} PRIVATE
+      KF6::ConfigCore
+      KF6::ConfigWidgets
+      KF6::IconThemes
+    )
+  endif()
 endif()
 
 install(TARGETS ${LIB_NAME} DESTINATION ${QT_PLUGIN_DIR}/platformthemes)
