chore: default support kde

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.16)
 project(qmarinetheme
-  VERSION 0.1.8
+  VERSION 0.1.9
   DESCRIPTION "A theme settting config with toml"
   LANGUAGES CXX
 )
 
 set(QT_PLUGIN_DIR "/usr/lib/qt6/plugins" CACHE STRING "PLUGIN DIR For qt")
 
-option(SUPPORT_KDE "support for kde icon themes" OFF)
+option(SUPPORT_KDE "support for kde icon themes" ON)
 option(AS_KDE6_PLUGIN "use as the qt platformplugin for kde" OFF)
 
 set(QT_VERSION "6" CACHE STRING "Qt Version")
