--- a/consolehelp/CMakeLists.txt
+++ b/consolehelp/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(BIN_NAME marinehelp${QT_VERSION})
 
-find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets)
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui GuiPrivate Widgets)
 
 add_executable(${BIN_NAME}
   main.cpp
