chore: bump version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(qmarinetheme
-  VERSION 0.1.9
-  DESCRIPTION "A theme settting config with toml"
+  VERSION 0.2.0
+  DESCRIPTION "A theme setting config with toml"
   LANGUAGES CXX
 )
 
