--- a/consolehelp/CMakeLists.txt
+++ b/consolehelp/CMakeLists.txt
@@ -1,7 +1,10 @@
 set(BIN_NAME marinehelp${QT_VERSION})
 
-find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui GuiPrivate Widgets)
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets)
 
+if(${QT_VERSION} STREQUAL 6)
+  find_package(Qt6GuiPrivate)
+endif()
 add_executable(${BIN_NAME}
   main.cpp
 )
