--- a/platformplugins/CMakeLists.txt
+++ b/platformplugins/CMakeLists.txt
@@ -1,12 +1,14 @@
 set(LIB_NAME marinePlatformTheme)
 
-find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui GuiPrivate Widgets DBus)
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets DBus)
 find_package(tomlplusplus REQUIRED)
 
 if(${QT_VERSION} STREQUAL 5)
   find_package(Qt5ServiceSupport)
   find_package(Qt5ThemeSupport REQUIRED)
   find_package(Qt5ThemeSupport REQUIRED)
+else()
+  find_package(Qt${QT_VERSION} REQUIRED COMPONENTS GuiPrivate )
 endif()
 
 if (${SUPPORT_KDE})
